--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
         <!-- Герой -->
         <section class="hero">
-            <h1 class="hero-title">"Эффективные решения для вашего бизнеса"</h1>
+            <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА </h1>
             <button type="button" class="button">Заказать услугу</button>
         </section>
 
